Kubernetes/AgrOne/AgrOne-Dev/AgroGeoServer-test/ingress-nginx/agrogeoserver-dev-web-ingress-config.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agrogeoserver-dev-web-ingres
  annotations:
    nginx.org/client-max-body-size: "1024m"
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
#    nginx.ingress.kubernetes.io/secure-backends: "true"
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
##    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
###    nginx.ingress.kubernetes.io/ssl-redirect: "true"
##    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"


  namespace: agrotech-dev
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 'agrogeo-dev-web.prodata.local'
      secretName: tls-secret-prodata-local
  rules:
  - host: agrogeo-dev-web.prodata.local
    http:
      paths:
      - backend:
          service:
            name: agrogeoserver-dev-web-service
            port:
              number: 8080
#        path: /
        path: /
        pathType: Prefix
